--- a/input_val.html
+++ b/input_val.html
@@ -5,10 +5,13 @@
     <h5 style="color: red; font-weight: bold;"> Please Enter the code you want to Encrypt below.</h5>
 
     <form action="http://192.168.225.44:8000/receive_form"  method="GET" style="text-align: center;" >
+      <fieldset>
         <legend>Text to be Encrypted</legend>
+        Name : <input type="text" value="user_name" name="user_name" maxlength="30"/>
+        Email ID : <input type="text" value="emailId" name="emailId" maxlength="30"/>
         <textarea rows="30" cols="80" name="code" > Enter the text here.</textarea>
         <input type="submit" value="CLick Here to Submit"/>
-
+      </fieldset>
     </form>
     <p>After the complete operation, u can log on to " http://192.168.225.44:8000/result " and copy the encrypted code there.</p>
 </body>
